packages/pkgcraft/pkgcraft-0.0.11.tar.gz/pkgcraft-0.0.11/testdata/repos/valid/bad/license/nonexistent/nonexistent-8.ebuild
EAPI=8
DESCRIPTION="ebuild with nonexistent LICENSE"
SLOT=0
LICENSE="nonexistent"
